--- a/notebooks/chapter04-03-langfuse-observability copy.ipynb
+++ b/notebooks/chapter04-03-langfuse-observability copy.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "# おまじない\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "endpoint = \"http://localhost:3000\"\n",
+    "endpoint = \"http://langfuse-server:3000\"\n",
     "public_key = os.getenv(\"PUBLIC_KEY\")\n",
     "secret_key = os.getenv(\"SECRET_KEY\")"
    ]
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,5 +661,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
