--- a/notebooks/chapter04-03-langfuse-observability.ipynb
+++ b/notebooks/chapter04-03-langfuse-observability.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "# おまじない\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "endpoint = \"http://localhost:3000\"\n",
+    "endpoint = \"http://langfuse-server:3000\"\n",
     "public_key = os.getenv(\"PUBLIC_KEY\")\n",
     "secret_key = os.getenv(\"SECRET_KEY\")"
    ]
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langfuse.client.StatefulSpanClient at 0x73788012b740>"
+       "<langfuse.client.StatefulSpanClient at 0x7fbdad65b710>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,16 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='喜んで！肉料理のおすすめをいくつか紹介しますね。\\n\\n- ステーキ：牛肉、豚肉、鶏肉など、お好みの肉を厚切りにして、強火で表面を焼き、中をジューシーに仕上げた料理です。好みに応じて、わさびや岩塩、バターなどの調味料をつけて食べるとより美味しくなります。\\n\\n- 焼肉：薄切りにした牛肉や豚肉、鶏肉を、タレや塩などで味付けして焼く料理です。野菜やキノコなどを一緒に焼いても美味しく、ご飯が進みます。\\n\\n- ローストビーフ：牛肉の塊をオーブンなどでゆっくりと焼き上げた料理です。中までしっかり火を通すのではなく、表面を焼き固めて中をレアに仕上げるのがポイントです。薄切りにして、好みのソースやマスタードをつけて食べると美味しいです。\\n\\n- 豚の角煮：豚バラ肉を大きめに切り、長時間煮込んで柔らかくした料理です。甘辛いタレがよく染み込んでいて、ご飯のおかずにもお酒のおつまみにもぴったりです。\\n\\n- 鶏の唐揚げ：鶏肉に下味をつけて、片栗粉や小麦粉をまぶして揚げた料理です。サクサクとした食感とジューシーな肉汁が魅力で、老若男女に人気の一品です。\\n\\n以上、おすすめの肉料理をいくつか紹介しました。ぜひお試しください！', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'fc41baad-0582-4bbb-acc2-5b3805bf2ef6', 'token_count': {'input_tokens': 206.0, 'output_tokens': 354.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'fc41baad-0582-4bbb-acc2-5b3805bf2ef6', 'token_count': {'input_tokens': 206.0, 'output_tokens': 354.0}}, id='run-a76e3572-d610-4c65-ac7e-b73ba412216b-0', usage_metadata={'input_tokens': 206, 'output_tokens': 354, 'total_tokens': 560})"
+       "AIMessage(content='喜んでいただけるか分かりませんが、いくつかおすすめの肉料理を紹介します。\\n\\n- ローストビーフ： 牛肉の塊をオーブンなどでゆっくりと焼き上げた料理です。ジューシーで柔らかく、赤身と脂身のバランスが絶妙です。\\n- 豚の角煮： 豚バラ肉を醤油や砂糖などで甘辛く煮込んだ料理です。脂がのった豚肉がとろけるように柔らかく、ご飯にもお酒にもよく合います。\\n- チキンティッカ： インド料理のグリルチキンです。ヨーグルトや香辛料に漬け込んだ鶏肉を串に刺して焼き上げます。スパイシーでジューシーな味わいが特徴です。\\n- ラムチョップ： ラム肉のリブ（あばら骨）部分をグリルしたり焼いたりした料理です。脂がのったラム肉の旨味と香りを楽しめます。\\n- 牛タンの燻製： 牛タンをスモークした料理です。独特の香りと柔らかい食感が魅力で、お酒のおつまみにもぴったりです。\\n\\n以上、お口に合うものが見つかるといいですね。', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'b142cdd7-1619-4c8a-b8a7-1149a6c769d4', 'token_count': {'input_tokens': 206.0, 'output_tokens': 283.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'b142cdd7-1619-4c8a-b8a7-1149a6c769d4', 'token_count': {'input_tokens': 206.0, 'output_tokens': 283.0}}, id='run-f388b33a-6296-4674-a089-e59a1e94f037-0', usage_metadata={'input_tokens': 206, 'output_tokens': 283, 'total_tokens': 489})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,16 +246,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langfuse.client.StatefulSpanClient at 0x737849e870e0>"
+       "<langfuse.client.StatefulSpanClient at 0x7fbdad65ad10>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,16 +291,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='喜んでいただけるか分かりませんが、いくつかおすすめの肉料理を紹介します。\\n\\n- ローストビーフ： 牛肉の塊をオーブンで焼いた料理で、ジューシーで柔らかく、赤身の美味しさを楽しめます。\\n- 豚の角煮： 豚バラ肉を醤油や砂糖などで長時間煮込んだ料理で、柔らかくホロホロとした食感が魅力です。\\n- チキンのトマト煮込み： 鶏肉をトマトソースで煮込んだ料理で、酸味と甘みが効いたさっぱりとした味わいが特徴です。\\n- ラムチョップ： 仔羊の骨付き肉をグリルした料理で、香草やスパイスで味付けし、ジューシーでクセになる味わいです。\\n- 牛タン焼き： 牛タンを薄切りにして焼いた料理で、柔らかくて旨味たっぷりで、ビールなどのお酒にもよく合います。\\n\\n以上、お口に合うものが見つかれば幸いです。', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'c3581c08-77f4-48e3-b131-388d3d56ff19', 'token_count': {'input_tokens': 206.0, 'output_tokens': 246.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'c3581c08-77f4-48e3-b131-388d3d56ff19', 'token_count': {'input_tokens': 206.0, 'output_tokens': 246.0}}, id='run-9cf1ecf2-28c9-401d-9c4e-e7cc6d432814-0', usage_metadata={'input_tokens': 206, 'output_tokens': 246, 'total_tokens': 452})"
+       "AIMessage(content='喜んでいただけるか分かりませんが、いくつかおすすめの肉料理を紹介します。\\n\\n- ローストビーフ： 牛肉の塊をオーブンなどでゆっくりと焼き上げた料理です。ジューシーでやわらかな食感と、深い味わいが楽しめます。\\n- 豚の角煮： 豚バラ肉を醤油や砂糖などで長時間煮込んだ料理です。とろけるような食感と、甘辛い味付けがご飯によく合います。\\n- チキンティッカ： インド料理のグリルチキンです。ヨーグルトと香辛料に漬け込んだ鶏肉を串に刺して焼き上げます。スパイシーでジューシーな味わいが特徴です。\\n- ラムチョップ： 子羊のリブ（あばら骨）部分を使った料理です。骨付き肉をグリルしたり、オーブンで焼いたりして楽しめます。やわらかな食感と、独特の香りが魅力です。\\n- 牛タンの燻製： 牛タンをスモークした料理です。香ばしく、ジューシーな味わいが楽しめます。スライスしてサラダに乗せたり、サンドイッチにしたりしてもおいしいです。\\n\\n以上、お口に合うものが見つかるといいですね。', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'cf79729a-9841-48b0-94a7-746ce92d5011', 'token_count': {'input_tokens': 206.0, 'output_tokens': 301.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'cf79729a-9841-48b0-94a7-746ce92d5011', 'token_count': {'input_tokens': 206.0, 'output_tokens': 301.0}}, id='run-02e7fd08-6a0d-4725-80fe-c3d1ac170c95-0', usage_metadata={'input_tokens': 206, 'output_tokens': 301, 'total_tokens': 507})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,16 +382,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langfuse.client.StatefulSpanClient at 0x73784950acf0>"
+       "<langfuse.client.StatefulSpanClient at 0x7fbd6fc53b90>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,16 +429,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='喜んで！肉料理のおすすめをいくつか紹介しますね。\\n\\n- ローストビーフ： 牛肉の塊を低温でじっくりと焼き上げた料理です。柔らかくジューシーな食感と、赤身の美味しさを楽しめます。\\n- 豚の角煮： 豚バラ肉を醤油や砂糖などで甘辛く煮込んだ料理です。柔らかくホロホロとした食感と、濃厚な味わいが魅力です。\\n- チキンのトマト煮込み： 鶏もも肉をトマト缶や野菜と一緒に煮込んだ料理です。トマトの酸味と鶏肉の旨味が絡み合い、さっぱりとした味わいです。\\n- ラムチョップのグリル： ラム肉の骨付きロース肉をグリルした料理です。香草やスパイスでマリネして焼くことで、独特の香りとジューシーな味わいを楽しめます。\\n- 牛タン焼き： 牛タンを薄切りにして焼き上げた料理です。柔らかくて旨味たっぷりで、ビールや日本酒などのお酒にもよく合います。\\n\\n以上、肉料理のおすすめでした。ぜひお試しください！', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'b0990de7-a09b-4c59-b932-21ee013abbba', 'token_count': {'input_tokens': 206.0, 'output_tokens': 290.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'b0990de7-a09b-4c59-b932-21ee013abbba', 'token_count': {'input_tokens': 206.0, 'output_tokens': 290.0}}, id='run-d121b12a-6815-4f14-bd37-f282f358d442-0', usage_metadata={'input_tokens': 206, 'output_tokens': 290, 'total_tokens': 496})"
+       "AIMessage(content='喜んでいただけるか分かりませんが、いくつかおすすめの肉料理を紹介します。\\n\\n- ローストビーフ： 牛肉の塊をオーブンでゆっくりと焼き上げた料理です。ジューシーでやわらかな食感と深い味わいが魅力です。\\n- 豚の角煮： 豚バラ肉を醤油や砂糖などでじっくりと煮込んだ料理です。とろけるような食感と甘辛い味付けがご飯にもお酒にもよく合います。\\n- チキンティッカ： インド料理のグリルチキンです。ヨーグルトと香辛料に漬け込んだ鶏肉を串に刺して焼き上げます。香り高く、ジューシーな味わいが楽しめます。\\n- ラムチョップ： ラム肉のロース部分を骨付きのままグリルした料理です。香草やスパイスで味付けし、香ばしく焼き上げます。ラム肉特有の香りと旨味が楽しめます。\\n- 牛タンの燻製： 牛タンをスモークした料理です。柔らかく、深い味わいで、お酒のおつまみにもぴったりです。\\n\\n以上、お口に合うものが見つかれば幸いです。', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '4c05e7ae-0017-465c-9bc4-539bf3dd54c3', 'token_count': {'input_tokens': 206.0, 'output_tokens': 283.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '4c05e7ae-0017-465c-9bc4-539bf3dd54c3', 'token_count': {'input_tokens': 206.0, 'output_tokens': 283.0}}, id='run-46d82dd3-2774-415a-90fe-575a73ba27f8-0', usage_metadata={'input_tokens': 206, 'output_tokens': 283, 'total_tokens': 489})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,16 +520,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langfuse.client.StatefulSpanClient at 0x737849eb9460>"
+       "<langfuse.client.StatefulSpanClient at 0x7fbd6fc673d0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,16 +565,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='喜んでいただけるか分かりませんが、いくつかおすすめの肉料理を紹介します。\\n\\n- ローストビーフ： 牛肉の塊をオーブンなどでゆっくりと焼き上げた料理です。ジューシーでやわらかな食感と、深い味わいが楽しめます。\\n- 豚の角煮： 豚バラ肉を醤油や砂糖などで長時間煮込んだ料理です。とろけるような食感と、甘辛い味付けがご飯によく合います。\\n- チキンティッカ： インド料理のグリルチキンです。ヨーグルトや香辛料に漬け込んだ鶏肉を串に刺して焼き上げます。香り高く、ジューシーな味わいが特徴です。\\n- ラムチョップ： 子羊のリブ（あばら骨）部分をグリルしたり、オーブンで焼いたりした料理です。やわらかな食感と、独特の香りが楽しめます。\\n- 牛タン焼き： 牛タンをスライスして焼き上げた料理です。やわらかな食感と、独特の風味が人気です。\\n\\n以上、お口に合うものがあれば幸いです。', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '486a822b-8bf0-4087-94eb-8f17c70020b8', 'token_count': {'input_tokens': 206.0, 'output_tokens': 270.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '486a822b-8bf0-4087-94eb-8f17c70020b8', 'token_count': {'input_tokens': 206.0, 'output_tokens': 270.0}}, id='run-e361d9af-0903-4a0d-ac6b-ffc802bcf855-0', usage_metadata={'input_tokens': 206, 'output_tokens': 270, 'total_tokens': 476})"
+       "AIMessage(content='喜んでいただけるか分かりませんが、いくつかおすすめの肉料理を紹介します。\\n\\n- ローストビーフ： 高品質の牛肉をオーブンでゆっくりと焼き上げた料理です。 レアに仕上げるのが一般的で、柔らかくジューシーな食感が魅力です。\\n\\n- ステーキ： 高級な肉料理の定番です。 好みの焼き加減で仕上げ、塩コショウやステーキソースなどで味付けします。\\n\\n- 焼肉： 牛肉や豚肉、鶏肉などを薄切りにして、タレにつけながら焼いて食べる料理です。 さまざまな部位を楽しめるのが魅力です。\\n\\n- 酢豚： 豚肉を甘酸っぱいタレで炒めた中華料理です。 彩りよく野菜も一緒に炒め、ご飯にもよく合います。\\n\\n- 肉じゃが： 牛肉または豚肉とじゃがいもを甘辛く煮込んだ日本の家庭料理です。 ほっとする味わいで、ご飯のおかずにもぴったりです。\\n\\n- チキンティッカ： インド料理の人気メニューで、ヨーグルトと香辛料に漬け込んだ鶏肉を串焼きにしたものです。 カレー粉などのスパイスが効いていて、独特の風味が楽しめます。\\n\\n- スペアリブ： 豚または牛のあばら骨についた肉をじっくりと焼いた料理です。 骨から肉をほじくり出すのが面白く、食べ応えもあります。\\n\\n- 豚の生姜焼き： 豚肉をしょうがと醤油で味付けして焼いた料理です。 さっぱりとしていて、ご飯が進みます。\\n\\n- ビーフストロガノフ： 牛肉を玉ねぎやマッシュルームと一緒にソテーし、サワークリームで仕上げたロシアの伝統料理です。 クリーミーでコクのある味わいが特徴です。\\n\\n- 豚バラの角煮： 豚バラ肉を醤油や砂糖などで甘辛く煮込んだ料理です。 柔らかくジューシーな肉と、とろとろに煮込まれた脂身が絶妙な味わいです。\\n\\nこれらの料理は、家庭でも比較的簡単に作れるものから、少し手間のかかるものまでさまざまです。 ぜひお試しください。', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '32a69255-4ead-4d6a-a626-9229e38e8d8b', 'token_count': {'input_tokens': 206.0, 'output_tokens': 538.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '32a69255-4ead-4d6a-a626-9229e38e8d8b', 'token_count': {'input_tokens': 206.0, 'output_tokens': 538.0}}, id='run-1c125da6-d7a4-42fa-bc72-cd88ba9bdbfe-0', usage_metadata={'input_tokens': 206, 'output_tokens': 538, 'total_tokens': 744})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,11 +605,18 @@
     "    config={\"callbacks\": [callback_handler]}\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -623,9 +630,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
