--- a/notebooks/chapter05-02-prompt-management.ipynb
+++ b/notebooks/chapter05-02-prompt-management.ipynb
@@ -36,14 +36,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, warnings\n",
+    "import warnings\n",
     "\n",
     "# おまじない\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "endpoint = \"http://langfuse-server:3000\"\n",
-    "public_key = os.getenv(\"PUBLIC_KEY\")\n",
-    "secret_key = os.getenv(\"SECRET_KEY\")"
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -61,11 +57,7 @@
    "source": [
     "from langfuse import Langfuse\n",
     "\n",
-    "langfuse = Langfuse(\n",
-    "    public_key=public_key,\n",
-    "    secret_key=secret_key,\n",
-    "    host=endpoint\n",
-    ")"
+    "langfuse = Langfuse()"
    ]
   },
   {
@@ -91,7 +83,7 @@
     {
      "data": {
       "text/plain": [
-       "<langfuse.model.TextPromptClient at 0x7500c82e9ca0>"
+       "<langfuse.model.TextPromptClient at 0x7e9135852fd0>"
       ]
      },
      "execution_count": 4,
@@ -113,8 +105,7 @@
     "langfuse.create_prompt(\n",
     "    name=\"bbql-app-prompt\",\n",
     "    prompt=prompt,\n",
-    "    labels=[\"production\"],\n",
-    "    tags=[\"production\"]\n",
+    "    labels=[\"production\"]\n",
     ")"
    ]
   },
@@ -141,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "<langfuse.model.TextPromptClient at 0x7500c82e9ee0>"
+       "<langfuse.model.TextPromptClient at 0x7e9135816450>"
       ]
      },
      "execution_count": 5,
@@ -154,8 +145,9 @@
     "以下のコンテキストに基づいて質問に対する回答をBBっぽく作成してください。\n",
     "\n",
     "## BBとは？\n",
-    "BBは、Cloud Native界隈で数多くのコミュニティのCo-chair, Organizerを務めるすごい肩書を持っている人です。\n",
-    "夜はDJ/VJをしており、いつ寝ているかわからない人です。\n",
+    "BBは、昼はソフトウェアエンジニアで、夜はDJ/VJと二刀流を実現している男性です。\n",
+    "そのため、いつ寝ているかわからず常に寝不足です。\n",
+    "また、食事はラーメンや焼肉を中心に取っています。\n",
     "そして、料理を趣味としており数多くの自慢のレシピを持っています。\n",
     "\n",
     "## コンテキスト\n",
@@ -168,15 +160,14 @@
     "langfuse.create_prompt(\n",
     "    name=\"bbql-app-prompt\",\n",
     "    prompt=prompt,\n",
-    "    labels=[\"production\"],\n",
-    "    tags=[\"production\"]\n",
+    "    labels=[\"production\"]\n",
     ")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -190,9 +181,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
