--- a/notebooks/chapter04-03-langfuse-observability.ipynb
+++ b/notebooks/chapter04-03-langfuse-observability.ipynb
@@ -32,18 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os, warnings, time, uuid\n",
     "\n",
     "# おまじない\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "endpoint = \"http://localhost:3000\"\n",
-    "public_key = os.getenv(\"PUBLIC_KEY\")\n",
-    "secret_key = os.getenv(\"SECRET_KEY\")"
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -62,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,17 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langfuse.decorators import langfuse_context, observe\n",
-    "\n",
-    "langfuse_context.configure(\n",
-    "    public_key=public_key,\n",
-    "    secret_key=secret_key,\n",
-    "    host=endpoint\n",
-    ")\n",
     "\n",
     "@observe()\n",
     "def search_the_bigbaby():\n",
@@ -112,16 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langfuse.client.StatefulSpanClient at 0x73788012b740>"
+       "<langfuse.client.StatefulSpanClient at 0x748c899fb610>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,11 +119,7 @@
    "source": [
     "from langfuse import Langfuse\n",
     "\n",
-    "langfuse = Langfuse(\n",
-    "    public_key=public_key,\n",
-    "    secret_key=secret_key,\n",
-    "    host=endpoint\n",
-    ")\n",
+    "langfuse = Langfuse()\n",
     "\n",
     "trace = langfuse.trace(\n",
     "    name=\"Ask the BigBaBy\",\n",
@@ -157,16 +143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='喜んで！肉料理のおすすめをいくつか紹介しますね。\\n\\n- ステーキ：牛肉、豚肉、鶏肉など、お好みの肉を厚切りにして、強火で表面を焼き、中をジューシーに仕上げた料理です。好みに応じて、わさびや岩塩、バターなどの調味料をつけて食べるとより美味しくなります。\\n\\n- 焼肉：薄切りにした牛肉や豚肉、鶏肉を、タレや塩などで味付けして焼く料理です。野菜やキノコなどを一緒に焼いても美味しく、ご飯が進みます。\\n\\n- ローストビーフ：牛肉の塊をオーブンなどでゆっくりと焼き上げた料理です。中までしっかり火を通すのではなく、表面を焼き固めて中をレアに仕上げるのがポイントです。薄切りにして、好みのソースやマスタードをつけて食べると美味しいです。\\n\\n- 豚の角煮：豚バラ肉を大きめに切り、長時間煮込んで柔らかくした料理です。甘辛いタレがよく染み込んでいて、ご飯のおかずにもお酒のおつまみにもぴったりです。\\n\\n- 鶏の唐揚げ：鶏肉に下味をつけて、片栗粉や小麦粉をまぶして揚げた料理です。サクサクとした食感とジューシーな肉汁が魅力で、老若男女に人気の一品です。\\n\\n以上、おすすめの肉料理をいくつか紹介しました。ぜひお試しください！', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'fc41baad-0582-4bbb-acc2-5b3805bf2ef6', 'token_count': {'input_tokens': 206.0, 'output_tokens': 354.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'fc41baad-0582-4bbb-acc2-5b3805bf2ef6', 'token_count': {'input_tokens': 206.0, 'output_tokens': 354.0}}, id='run-a76e3572-d610-4c65-ac7e-b73ba412216b-0', usage_metadata={'input_tokens': 206, 'output_tokens': 354, 'total_tokens': 560})"
+       "AIMessage(content='喜んでいただけるか分かりませんが、いくつかおすすめの肉料理を紹介します。\\n\\n- ローストビーフ： 牛肉の塊をオーブンで焼いた料理で、柔らかくジューシーな食感と深い味わいが魅力です。\\n- 豚の角煮： 豚バラ肉を醤油や砂糖などで甘辛く煮込んだ料理で、トロトロに柔らかくなった肉の旨味がたまりません。\\n- チキンティッカ： インド料理のグリルチキンで、ヨーグルトとスパイスに漬け込んだ鶏肉を焼いたものです。香り高くジューシーな味わいが楽しめます。\\n- ラムチョップ： 子羊のリブ（あばら骨）肉をグリルしたもので、柔らかくジューシーな肉質と独特の香りが魅力です。\\n- 牛タンのステーキ： 牛タンは独特の食感と旨味があり、ステーキにすると絶品です。\\n\\n以上、お口に合うものが見つかると幸いです。', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'f78e9290-13ee-425b-9753-da60c3dcbef5', 'token_count': {'input_tokens': 206.0, 'output_tokens': 247.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'f78e9290-13ee-425b-9753-da60c3dcbef5', 'token_count': {'input_tokens': 206.0, 'output_tokens': 247.0}}, id='run-dc66d1b2-8362-4f4b-96fb-37f49f681abd-0', usage_metadata={'input_tokens': 206, 'output_tokens': 247, 'total_tokens': 453})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,9 +161,6 @@
     "from langfuse.callback import CallbackHandler\n",
     "\n",
     "callback_handler = CallbackHandler(\n",
-    "    public_key=public_key,\n",
-    "    secret_key=secret_key,\n",
-    "    host=endpoint,\n",
     "    session_id=session_id\n",
     ")\n",
     "\n",
@@ -214,17 +197,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langfuse.decorators import langfuse_context, observe\n",
-    "\n",
-    "langfuse_context.configure(\n",
-    "    public_key=public_key,\n",
-    "    secret_key=secret_key,\n",
-    "    host=endpoint\n",
-    ")\n",
     "\n",
     "@observe()\n",
     "def search_the_bigbaby():\n",
@@ -246,16 +223,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langfuse.client.StatefulSpanClient at 0x737849e870e0>"
+       "<langfuse.client.StatefulSpanClient at 0x748c899f9750>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,11 +240,7 @@
    "source": [
     "from langfuse import Langfuse\n",
     "\n",
-    "langfuse = Langfuse(\n",
-    "    public_key=public_key,\n",
-    "    secret_key=secret_key,\n",
-    "    host=endpoint\n",
-    ")\n",
+    "langfuse = Langfuse()\n",
     "\n",
     "trace = langfuse.trace(\n",
     "    name=\"Ask the BigBaBy\",\n",
@@ -291,16 +264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='喜んでいただけるか分かりませんが、いくつかおすすめの肉料理を紹介します。\\n\\n- ローストビーフ： 牛肉の塊をオーブンで焼いた料理で、ジューシーで柔らかく、赤身の美味しさを楽しめます。\\n- 豚の角煮： 豚バラ肉を醤油や砂糖などで長時間煮込んだ料理で、柔らかくホロホロとした食感が魅力です。\\n- チキンのトマト煮込み： 鶏肉をトマトソースで煮込んだ料理で、酸味と甘みが効いたさっぱりとした味わいが特徴です。\\n- ラムチョップ： 仔羊の骨付き肉をグリルした料理で、香草やスパイスで味付けし、ジューシーでクセになる味わいです。\\n- 牛タン焼き： 牛タンを薄切りにして焼いた料理で、柔らかくて旨味たっぷりで、ビールなどのお酒にもよく合います。\\n\\n以上、お口に合うものが見つかれば幸いです。', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'c3581c08-77f4-48e3-b131-388d3d56ff19', 'token_count': {'input_tokens': 206.0, 'output_tokens': 246.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'c3581c08-77f4-48e3-b131-388d3d56ff19', 'token_count': {'input_tokens': 206.0, 'output_tokens': 246.0}}, id='run-9cf1ecf2-28c9-401d-9c4e-e7cc6d432814-0', usage_metadata={'input_tokens': 206, 'output_tokens': 246, 'total_tokens': 452})"
+       "AIMessage(content='喜んでいただけるか分かりませんが、いくつかおすすめの肉料理を紹介します。\\n\\n- ローストビーフ： 牛肉の塊をオーブンで焼いた料理で、柔らかくジューシーな食感と深い味わいが楽しめます。\\n- 豚の角煮： 豚バラ肉を醤油や砂糖などで長時間煮込んだ料理で、トロトロに柔らかくなった肉の旨味がたまりません。\\n- チキンティッカ： インド料理のグリルチキンで、ヨーグルトと香辛料に漬け込んだ鶏肉を串に刺して焼いたものです。香り高くジューシーな味わいが特徴です。\\n- ラムチョップ： ラム肉のロース部分を骨付きのまま焼いた料理で、ジューシーな肉汁と独特の香りが楽しめます。\\n- 牛タン焼き： 牛タンをスライスして焼いた料理で、柔らかくて旨味たっぷりの味わいが魅力です。\\n\\n以上、お口に合うものがあると幸いです。', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '34abb2f4-47fe-4791-b046-f301f3ee329a', 'token_count': {'input_tokens': 206.0, 'output_tokens': 251.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '34abb2f4-47fe-4791-b046-f301f3ee329a', 'token_count': {'input_tokens': 206.0, 'output_tokens': 251.0}}, id='run-c74dd8e5-a64c-4577-9ab2-e743d323e064-0', usage_metadata={'input_tokens': 206, 'output_tokens': 251, 'total_tokens': 457})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,9 +282,6 @@
     "from langfuse.callback import CallbackHandler\n",
     "\n",
     "callback_handler = CallbackHandler(\n",
-    "    public_key=public_key,\n",
-    "    secret_key=secret_key,\n",
-    "    host=endpoint,\n",
     "    user_id=\"user@example.com\"\n",
     ")\n",
     "\n",
@@ -348,17 +318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langfuse.decorators import langfuse_context, observe\n",
-    "\n",
-    "langfuse_context.configure(\n",
-    "    public_key=public_key,\n",
-    "    secret_key=secret_key,\n",
-    "    host=endpoint\n",
-    ")\n",
     "\n",
     "@observe()\n",
     "def search_the_bigbaby():\n",
@@ -382,16 +346,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langfuse.client.StatefulSpanClient at 0x73784950acf0>"
+       "<langfuse.client.StatefulSpanClient at 0x748c5efebd50>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,11 +363,7 @@
    "source": [
     "from langfuse import Langfuse\n",
     "\n",
-    "langfuse = Langfuse(\n",
-    "    public_key=public_key,\n",
-    "    secret_key=secret_key,\n",
-    "    host=endpoint\n",
-    ")\n",
+    "langfuse = Langfuse()\n",
     "\n",
     "trace = langfuse.trace(\n",
     "    name=\"Ask the BigBaBy\",\n",
@@ -429,16 +389,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='喜んで！肉料理のおすすめをいくつか紹介しますね。\\n\\n- ローストビーフ： 牛肉の塊を低温でじっくりと焼き上げた料理です。柔らかくジューシーな食感と、赤身の美味しさを楽しめます。\\n- 豚の角煮： 豚バラ肉を醤油や砂糖などで甘辛く煮込んだ料理です。柔らかくホロホロとした食感と、濃厚な味わいが魅力です。\\n- チキンのトマト煮込み： 鶏もも肉をトマト缶や野菜と一緒に煮込んだ料理です。トマトの酸味と鶏肉の旨味が絡み合い、さっぱりとした味わいです。\\n- ラムチョップのグリル： ラム肉の骨付きロース肉をグリルした料理です。香草やスパイスでマリネして焼くことで、独特の香りとジューシーな味わいを楽しめます。\\n- 牛タン焼き： 牛タンを薄切りにして焼き上げた料理です。柔らかくて旨味たっぷりで、ビールや日本酒などのお酒にもよく合います。\\n\\n以上、肉料理のおすすめでした。ぜひお試しください！', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'b0990de7-a09b-4c59-b932-21ee013abbba', 'token_count': {'input_tokens': 206.0, 'output_tokens': 290.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'b0990de7-a09b-4c59-b932-21ee013abbba', 'token_count': {'input_tokens': 206.0, 'output_tokens': 290.0}}, id='run-d121b12a-6815-4f14-bd37-f282f358d442-0', usage_metadata={'input_tokens': 206, 'output_tokens': 290, 'total_tokens': 496})"
+       "AIMessage(content='喜んでいただけるか分かりませんが、いくつかおすすめの肉料理を紹介します。\\n\\n- ローストビーフ： 牛肉の塊をオーブンで焼いた料理で、柔らかくジューシーな食感と深い味わいが楽しめます。\\n- 豚の角煮： 豚バラ肉を醤油や砂糖などで長時間煮込んだ料理で、トロトロの食感と甘辛い味付けがご飯にもお酒にもよく合います。\\n- 鶏の唐揚げ： 鶏肉に下味をつけて揚げた料理で、サクサクとした食感とジューシーな肉汁が人気です。\\n- ラムチョップ： ラム肉の骨付きロース肉を焼いた料理で、香草やスパイスを使った香り高い味わいが楽しめます。\\n- ハンバーグ： 牛肉や豚肉のひき肉を成形して焼いた料理で、デミグラスソースやトマトソースなど様々な味付けが楽しめます。\\n\\n以上、お好みの料理はありましたか？', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'f8e91211-29f2-4c26-b976-1422c62c40d5', 'token_count': {'input_tokens': 206.0, 'output_tokens': 244.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'f8e91211-29f2-4c26-b976-1422c62c40d5', 'token_count': {'input_tokens': 206.0, 'output_tokens': 244.0}}, id='run-3f080ce0-9e08-42f8-88b6-441420dc1855-0', usage_metadata={'input_tokens': 206, 'output_tokens': 244, 'total_tokens': 450})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,9 +407,6 @@
     "from langfuse.callback import CallbackHandler\n",
     "\n",
     "callback_handler = CallbackHandler(\n",
-    "    public_key=public_key,\n",
-    "    secret_key=secret_key,\n",
-    "    host=endpoint,\n",
     "    metadata={\n",
     "        \"search_params_top_k\": 3\n",
     "    }\n",
@@ -488,17 +445,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langfuse.decorators import langfuse_context, observe\n",
-    "\n",
-    "langfuse_context.configure(\n",
-    "    public_key=public_key,\n",
-    "    secret_key=secret_key,\n",
-    "    host=endpoint\n",
-    ")\n",
     "\n",
     "@observe()\n",
     "def search_the_bigbaby():\n",
@@ -520,16 +471,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langfuse.client.StatefulSpanClient at 0x737849eb9460>"
+       "<langfuse.client.StatefulSpanClient at 0x748c5effbf50>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,11 +488,7 @@
    "source": [
     "from langfuse import Langfuse\n",
     "\n",
-    "langfuse = Langfuse(\n",
-    "    public_key=public_key,\n",
-    "    secret_key=secret_key,\n",
-    "    host=endpoint\n",
-    ")\n",
+    "langfuse = Langfuse()\n",
     "\n",
     "trace = langfuse.trace(\n",
     "    name=\"Ask the BigBaBy\",\n",
@@ -565,16 +512,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='喜んでいただけるか分かりませんが、いくつかおすすめの肉料理を紹介します。\\n\\n- ローストビーフ： 牛肉の塊をオーブンなどでゆっくりと焼き上げた料理です。ジューシーでやわらかな食感と、深い味わいが楽しめます。\\n- 豚の角煮： 豚バラ肉を醤油や砂糖などで長時間煮込んだ料理です。とろけるような食感と、甘辛い味付けがご飯によく合います。\\n- チキンティッカ： インド料理のグリルチキンです。ヨーグルトや香辛料に漬け込んだ鶏肉を串に刺して焼き上げます。香り高く、ジューシーな味わいが特徴です。\\n- ラムチョップ： 子羊のリブ（あばら骨）部分をグリルしたり、オーブンで焼いたりした料理です。やわらかな食感と、独特の香りが楽しめます。\\n- 牛タン焼き： 牛タンをスライスして焼き上げた料理です。やわらかな食感と、独特の風味が人気です。\\n\\n以上、お口に合うものがあれば幸いです。', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '486a822b-8bf0-4087-94eb-8f17c70020b8', 'token_count': {'input_tokens': 206.0, 'output_tokens': 270.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '486a822b-8bf0-4087-94eb-8f17c70020b8', 'token_count': {'input_tokens': 206.0, 'output_tokens': 270.0}}, id='run-e361d9af-0903-4a0d-ac6b-ffc802bcf855-0', usage_metadata={'input_tokens': 206, 'output_tokens': 270, 'total_tokens': 476})"
+       "AIMessage(content='喜んでいただけるか分かりませんが、いくつかおすすめの肉料理を紹介します。\\n\\n- ローストビーフ： 牛肉の塊をオーブンで焼いた伝統的なイギリス料理です。焼き加減を調節して、好みのレア加減で楽しめます。\\n\\n- プルコギ： 韓国の伝統的な肉料理で、薄切りにした牛肉や豚肉を甘辛いタレで炒めます。野菜もたっぷり摂れるので栄養的にも優れています。\\n\\n- 酢豚： 中華料理の定番です。甘酸っぱいタレが食欲をそそります。\\n\\n- 牛タン焼き： 牛タンをスライスして焼いた料理で、やわらかくてジューシーな食感が魅力です。\\n\\n- ラムチョップ： 羊肉の肋骨部分をカットしたもので、骨付きのままグリルしたり焼いたりして食べます。独特の香りと旨味が楽しめます。\\n\\n- チキンティッカ： インド料理のタンドリーチキンの一種で、ヨーグルトと香辛料に漬け込んだ鶏肉を串に刺して焼きます。\\n\\n- ポークリブのBBQ： アメリカ南部の伝統料理で、豚のスペアリブを香ばしく焼き上げ、甘辛いBBQソースを絡めます。\\n\\n- ビーフストロガノフ： ロシアの伝統的なシチューで、牛肉と玉ねぎをソテーし、スメタナ（サワークリーム）で煮込みます。\\n\\n- シュラスコ： ブラジルの伝統的なバーベキューで、さまざまな種類の肉を串に刺し、岩塩のみで味付けして焼き上げます。\\n\\n- ミートローフ： 挽肉と野菜を混ぜてオーブンで焼いたアメリカの家庭料理です。肉汁がジューシーで、冷めてもおいしく食べられます。\\n\\n以上、世界各国から選んだ肉料理を紹介しました。ぜひお試しください。', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '358c7f55-86dc-45d4-8ca7-b87be56cabee', 'token_count': {'input_tokens': 206.0, 'output_tokens': 463.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '358c7f55-86dc-45d4-8ca7-b87be56cabee', 'token_count': {'input_tokens': 206.0, 'output_tokens': 463.0}}, id='run-7b1c6a8b-203f-4077-8e82-5c0aff38a881-0', usage_metadata={'input_tokens': 206, 'output_tokens': 463, 'total_tokens': 669})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,9 +530,6 @@
     "from langfuse.callback import CallbackHandler\n",
     "\n",
     "callback_handler = CallbackHandler(\n",
-    "    public_key=public_key,\n",
-    "    secret_key=secret_key,\n",
-    "    host=endpoint,\n",
     "    tags=[\"production\", \"summarize\"]\n",
     ")\n",
     "\n",
@@ -609,7 +553,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -623,9 +567,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
